fix codesmells