@@ -67,7 +67,7 @@ public class TracingExclusionsConfiguration {
 
         List<Pattern> patterns = exclusions.stream()
             .map(Pattern::compile)
-            .collect(Collectors.toList());
+            .toList();
         return uri -> patterns.stream().anyMatch(pattern -> pattern.matcher(uri).matches());
     }
 }
